docs: add swagger doucmentation for meal plan endpoints
