# internal/app/meal_plan/interface/rest/meal_plan.go
@@ -2,6 +2,7 @@ package rest
 
 import (
 	"github.com/Ablebil/sea-catering-be/internal/app/meal_plan/usecase"
+	_ "github.com/Ablebil/sea-catering-be/internal/domain/dto"
 	res "github.com/Ablebil/sea-catering-be/internal/infra/response"
 	"github.com/gofiber/fiber/v2"
 	"github.com/google/uuid"
@@ -21,6 +22,13 @@ func NewMealPlanHandler(routerGroup fiber.Router, mealPlanUsecase usecase.MealPl
 	routerGroup.Get("/:id", mealPlanHandler.GetMealPlanByID)
 }
 
+// @Summary      Get All Meal Plans
+// @Description  Get all meal plans.
+// @Tags         MealPlan
+// @Produce      json
+// @Success      200  {object}  res.Res{payload=[]dto.MealPlanResponse} "Get all meal plans successful"
+// @Failure      500  {object}  res.Err "Internal Server Error"
+// @Router       /meal-plans/ [get]
 func (h MealPlanHandler) GetAllMealPlans(ctx *fiber.Ctx) error {
 	mealPlans, err := h.MealPlanUsecase.GetAllMealPlans()
 	if err != nil {
@@ -30,6 +38,16 @@ func (h MealPlanHandler) GetAllMealPlans(ctx *fiber.Ctx) error {
 	return res.OK(ctx, mealPlans, res.GetAllMealPlansSuccess)
 }
 
+// @Summary      Get Meal Plan By ID
+// @Description  Get meal plan detail by ID.
+// @Tags         MealPlan
+// @Produce      json
+// @Param        id   path      string  true  "Meal Plan ID"
+// @Success      200  {object}  res.Res{payload=dto.MealPlanResponse} "Get meal plan by ID successful"
+// @Failure      400  {object}  res.Err "Invalid meal plan ID"
+// @Failure      404  {object}  res.Err "Meal plan not found"
+// @Failure      500  {object}  res.Err "Internal Server Error"
+// @Router       /meal-plans/{id} [get]
 func (h MealPlanHandler) GetMealPlanByID(ctx *fiber.Ctx) error {
 	id, err := uuid.Parse(ctx.Params("id"))
 	if err != nil {
